# django_matchmaker

./: DEPRECATED.md  LICENSE  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.in  requirements.txt
dashboard/: views.py
django_matchmaker/: asgi.py  urls.py  wsgi.py
django_matchmaker/settings/: __init__.py  base.py  local.py  production.py
jobs/: __init__.py  admin.py  apps.py  models.py  signals.py
jobs/migrations/: 0001_initial.py  0002_auto_20151213_1939.py  0003_auto_20151220_1831.py
likes/: admin.py  models.py  views.py
likes/migrations/: 0001_initial.py  0002_auto_20151221_1006.py
matches/: __init__.py  admin.py  apps.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
matches/migrations/: 0001_initial.py  0002_employermatch_jobmatch_locationmatch.py  0003_auto_20151220_1650.py  0004_auto_20151220_1727.py
newsletter/: admin.py  views.py
newsletter/migrations/: 0001_initial.py
profiles/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  views.py
profiles/migrations/: 0001_initial.py  0002_auto_20151213_1853.py  0003_userjob.py
questions/: __init__.py  apps.py  forms.py  matching.py  models.py  signals.py  views.py
questions/migrations/: 0001_initial.py  0002_answer.py  0003_useranswer.py  0004_auto_20151206_1720.py
templates/: base.html  forms.html  formset.html  home.html  navbar.html
templates/dashboard/: home.html
templates/matches/: employer_match_view.html  position_match_view.html
templates/profiles/: profile_user.html  profile_view.html
templates/questions/: home.html  single.html  (+1 more)
(+1 files in other folders)
