[project]
name = "django-matchmaker"
version = "0.2.0"
description = "A typical django framework for recommendation system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap3>=2024.1",
    "django>=5.2",
    "django-crispy-forms>=2.5",
    "django-localflavor>=5.0",
    "django-registration-redux>=2.13",
    "pillow>=12",
]
